--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,141 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background6"
-    android:gravity="center">
-
-
-    <!-- <ImageView
-         android:id="@+id/login_image_loginApp"
-         android:layout_width="184dp"
-         android:layout_height="130dp"
-         android:marginBottom="80dp"
-         android:src="@drawable/logo4"
-
-         /> -->
-
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/login_image_loginApp"
-        android:layout_width="121dp"
-        android:layout_height="131dp"
-        android:layout_marginBottom="40dp"
-        android:src="@drawable/nb" />
-
-    <TextView
-        android:id="@+id/login_text_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="connexion"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="36sp"
-        android:textStyle="normal" />
-
+    tools:context=".Login">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/login_edittext_email"
-            android:layout_width="320dp"
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="273dp"
+            android:background="@drawable/blue_bg">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/login_image_loginApp"
+                android:layout_width="90dp"
+                android:layout_height="85dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="93dp"
+                android:src="@drawable/dz" />
+
+        </FrameLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/ic_baseline_email_24"
-            android:ems="10"
+            android:layout_marginLeft="62dp"
+            android:layout_marginTop="36.7dp"
+            android:layout_marginRight="62dp"
+            android:background="@drawable/blue_border_rounded">
 
-            android:hint="Adresse Email"
-            android:inputType="textEmailSubject"
-            android:textSize="24sp" />
+            <EditText
+                android:id="@+id/login_edittext_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/username_icon"
+                android:hint="Adresse Email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="17dp"
+                android:paddingBottom="15dp"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/login_edittext_password"
-            android:layout_width="320dp"
+            <ImageView
+                android:id="@+id/username_icon"
+                android:layout_width="32dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="17dp"
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_baseline_email_24" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
-            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
-            android:ems="10"
-            android:hint="Mot de passe"
-            android:inputType="textPassword"
-            android:textSize="24sp" />
+            android:layout_marginLeft="62dp"
+            android:layout_marginTop="12.7dp"
+            android:layout_marginRight="62dp"
+            android:background="@drawable/blue_border_rounded">
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/login_edittext_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/password_icon"
+                android:ems="10"
+                android:hint="Mot de passe"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="17dp"
+                android:paddingBottom="15dp"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:textSize="18sp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="126dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        >
+            <ImageView
+                android:id="@+id/password_icon"
+                android:layout_width="32dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="17dp"
+                android:src="@drawable/ic_baseline_lock_24" />
+
+
+        </RelativeLayout>
 
         <Button
             android:id="@+id/login_button_seConnectez"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/login_edittext_passwor"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-
+            android:layout_gravity="center"
+            android:layout_marginLeft="62dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="62dp"
             android:backgroundTint="@color/blue"
             android:text="Se connecter"
             android:textSize="20sp"
             android:textStyle="bold" />
-        <!-- <Button
-            android:id="@+id/login_button_seConnectez"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@color/Mix"
-            android:gravity="center"
-            android:text="Se connecter"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/amaranth"/> -->
+
         <Button
             android:id="@+id/login_button_inscrire"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/login_edittext_passwor"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="62dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginRight="62dp"
             android:backgroundTint="@color/blue"
             android:text="S'inscrire"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
-
-        <!-- <Button
-             android:id="@+id/login_button_inscrire"
-             android:layout_width="200dp"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center"
-             android:layout_marginLeft="30dp"
-             android:layout_marginRight="20dp"
-             android:background="@color/Mix"
-             android:gravity="center"
-             android:text="S'inscrire"
-             android:textColor="@color/black"
-             android:textSize="20sp"
-             android:textStyle="bold"
-             android:fontFamily="@font/amaranth"/> -->
+            android:textStyle="bold" />
 
 
     </LinearLayout>
 
-</LinearLayout>
+
+
+</RelativeLayout>
