--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,7 +87,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginRight="10dp"
         android:backgroundTint="@color/blue"
-        android:text="Enregistrer"
+        android:text="S’inscrire"
         android:textSize="18sp"
         android:textStyle="bold" />
 
