--- a/app/src/main/res/layout/fragment_dateragment.xml
+++ b/app/src/main/res/layout/fragment_dateragment.xml
@@ -13,37 +13,25 @@
        android:layout_marginTop="60dp"
        android:orientation="vertical">
 
+
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:layout_marginTop="30dp"
            android:gravity="center"
 
            android:text="Marquer votre Date et heure"
            android:textColor="@color/blue"
            android:textSize="22sp"
-           android:textStyle="bold"/>
+           android:textStyle="bold" />
 
 
        <TextView
            android:id="@+id/myDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="Aperçu de la date choisie ici "
            android:textSize="18dp" />
-
-           <TextView
-           android:id="@+id/preview_picked_time_textView"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="9dp"
-           android:layout_gravity="center"
-           android:text="Aperçu de l'heure choisie ici"
-           android:textSize="18dp"/>
-
-
 
        <LinearLayout
            android:background="@drawable/bg_calendar"
@@ -59,19 +47,6 @@
            </CalendarView>
 
        </LinearLayout>
-       <Button
-           android:id="@+id/pick_time_button"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="0dp"
-           android:layout_gravity="center"
-           android:backgroundTint="@color/blue"
-           android:text="heure"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent" />
-
-
 
 
    </LinearLayout>
@@ -98,6 +73,37 @@
             android:text="Quitter"
             android:textColor="@color/blue"
             android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/pick_time_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="165dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="158dp"
+            android:layout_marginBottom="215dp"
+            android:backgroundTint="@color/blue"
+            android:text="heure"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/preview_picked_time_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="90dp"
+            android:layout_marginBottom="301dp"
+            android:text="Aperçu de l'heure choisie ici"
+            android:textSize="18dp" />
     </RelativeLayout>
 
 
