--- a/app/src/main/res/layout/fragment_dateragment.xml
+++ b/app/src/main/res/layout/fragment_dateragment.xml
@@ -10,7 +10,7 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:layout_marginTop="60dp"
+       android:layout_marginTop="80dp"
        android:orientation="vertical">
 
 
@@ -30,6 +30,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
+           android:layout_marginTop="35dp"
            android:text="Aperçu de la date choisie ici "
            android:textSize="18dp" />
 
@@ -38,7 +39,7 @@
            android:layout_marginLeft="55dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
-           android:layout_marginTop="40dp">
+           android:layout_marginTop="25dp">
 
            <CalendarView
                android:id="@+id/date_calendar_DateAppointment"
@@ -76,34 +77,24 @@
 
         <Button
             android:id="@+id/pick_time_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginStart="165dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="158dp"
-            android:layout_marginBottom="215dp"
+            android:layout_marginRight="90dp"
+            android:layout_marginBottom="245dp"
             android:backgroundTint="@color/blue"
-            android:text="heure"
+            android:gravity="center"
+            android:text="Sélectionnez l'heure"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/preview_picked_time_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="90dp"
-            android:layout_marginBottom="301dp"
-            android:text="Aperçu de l'heure choisie ici"
-            android:textSize="18dp" />
+
     </RelativeLayout>
 
 
