--- a/app/src/main/res/layout/fragment_dateragment.xml
+++ b/app/src/main/res/layout/fragment_dateragment.xml
@@ -89,6 +89,7 @@
             android:id="@+id/pick_time_button"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:textColor="@color/white"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
@@ -96,7 +97,7 @@
             android:layout_marginLeft="70dp"
             android:layout_marginTop="0dp"
             android:layout_marginRight="70dp"
-            android:layout_marginBottom="255dp"
+            android:layout_marginBottom="250dp"
             android:backgroundTint="@color/blue"
             android:textSize="18sp"
             android:gravity="center"
